# agriculture-handling-API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
base/src/: main.py
base/src/core/: auth.py  config.py  logging.py
base/src/db/: database.py
base/src/models/: base.py  event.py  notification.py  recommendation.py  user.py
docs/: SRS.docx
src/: main.py
src/api/v1/: auth.py  auth_api.py  campaign_api.py  event_api.py  notification_api.py  plot_api.py  recommendation_api.py  user_api.py
src/core/: auth.py  config.py  logging.py
src/db/: database.py
src/exceptions/: api_exceptions.py
src/models/: __init__.py  base_model.py  campaign.py  campaign_model.py  event_model.py  notification_model.py  plot.py  plot_model.py  recommendation_model.py  user.py  user_model.py
src/repositories/: base_repository.py  campaign_repository.py  event_repository.py  notification_repository.py  plot_repository.py  recommendation_repository.py  use_repository.py  user_repository.py
src/schema/: auth_schema.py  campaign_schema.py  event_schema.py  notification_schema.py  plot_schema.py  recommendation_schema.py  user_schema.py
src/schemas/: auth.py  auth_schema.py
src/services/: base_service.py  campaign_service.py  event_service.py  notification_service.py  plot_service.py  recommendation_service.py  user_service.py
