[project]
name = "api-agriculture-handling"
version = "0.1.0"
description = "API de gestión de campañas agrícolas"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "fastapi-users>=11.0.0",
    "python-dotenv>=1.0.0",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "fastapi-mail>=1.5.0",
    "typing-inspect>=0.8.0",
    "loguru>=0.7.0",
    "alembic>=1.13.1",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
lint.select = ["E", "F", "W", "I", "B", "C", "N", "UP", "YTT"]
lint.ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.pyright]
include = ["src"]
exclude = ["tests", ".venv"]
pythonVersion = "3.11"
reportMissingImports = true
reportUnusedImport = true

[project.scripts]
start = "src.main:app_entry"
